test/2/scope/circular-def-do.err
scope error: test/2/scope/circular-def-do.ploy:1:7-7: expected a value; `x` refers to a forward declaration.
  x = { x }
        ~
